completed accept and reject logic for proeprties

--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,5 @@ PG_HOST=localhost
 PG_DATABASE=real_estate_db
 PG_PASSWORD=changteezy
 PG_PORT=5432
+
+jwtSecretKey  = ajapaniparlajastoxahaiktaktiho
